--- a/src/config/envs/multi_coverage.yaml
+++ b/src/config/envs/multi_coverage.yaml
@@ -23,7 +23,7 @@ env_args:
     observation_range: -1   # radius of observation, -1 means full observability
     observe_ids: True       # observation includes agents' ids
     observe_state: False    # whether an observation is only partial (False) or central including agent position (True)
-    abs_location: False     # add one-hot layer to the observation with agent's self-location
+    abs_location: True      # add one-hot layer to the observation with agent's self-location [Must be TRUE, other cases wasn't implemented]
     watch_covered: True     # observe which cells was covered and which wasn't
     watch_surface: True     # observe where obstacles and threat are located
 
