--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,8 +19,8 @@
             "program": "${workspaceFolder}/src/main.py",
             "console": "integratedTerminal",
             "args": [
-                "--config=dcg",
-                "--env-config=multi_coverage",
+                "--config=pseq",
+                "--env-config=multi_coverage_e1",
                 "-d"
             ]        
         },
@@ -32,9 +32,7 @@
             "console": "integratedTerminal",
             "args": [
                 "--config=dcg",
-                "--env-config=rel_overgen",
-                "with",
-                "env_args.miscapture_punishment=0",
+                "--env-config=multi_coverage",
                 "-d"
             ]
         }
