--- a/src/config/default.yaml
+++ b/src/config/default.yaml
@@ -28,8 +28,8 @@ local_results_path: "results" # Path for local results
 
 # --- RL hyperparameters ---
 gamma: 0.99
-batch_size: 32 # Number of episodes to train on
-buffer_size: 32 # Size of the replay buffer
+batch_size: 4 # Number of episodes to train on #! changed
+buffer_size: 4 # Size of the replay buffer #! changed
 lr: 0.0005 # Learning rate for agents
 critic_lr: 0.0005 # Learning rate for critics
 optim_alpha: 0.99 # RMSProp alpha
@@ -39,8 +39,8 @@ grad_norm_clip: 10 # Reduce magnitude of gradients above this L2 norm
 # --- Agent parameters ---
 agent: "rnn" # Default rnn agent
 rnn_hidden_dim: 64 # Size of hidden state for default rnn agent
-obs_agent_id: True # Include the agent's one_hot id in the observation
-obs_last_action: True # Include the agent's last action (one_hot) in the observation
+obs_agent_id: False # Include the agent's one_hot id in the observation
+obs_last_action: False # Include the agent's last action (one_hot) in the observation
 
 # --- Experiment running params ---
 repeat_id: 1
