--- a/src/config/algs/pseq.yaml
+++ b/src/config/algs/pseq.yaml
@@ -5,11 +5,12 @@ name: "pseq"
 action_selector: "epsilon_greedy"
 epsilon_start: 1.0            # Initial epsilon for exploration
 epsilon_finish: 0.05          # Final epsilon for exploration
-epsilon_anneal_time: 50000    # Number of time steps until exploration has finished
+epsilon_anneal_time: 150000    # Number of time steps until exploration has finished
 
 # specify learner, controller and agent
 agent: "rnn"                  # A RNN agent that returns its hidden state instead of its value # TODO select architecture
 agent_output_type: "q"        # The output format is Q-values
+double_q: True                # DDQN
 learner: "pseq_learner"       # The learner for PSeq
 mac: "pseq"                   # The multi-agent controller for PSeq
 mixer:                        # No mixing network for PSeq
