--- a/src/config/default.yaml
+++ b/src/config/default.yaml
@@ -13,7 +13,7 @@ log_interval: 2000 # Log summary of stats after every {} timesteps
 runner_log_interval: 2000 # Log runner stats (not test stats) every {} timesteps
 learner_log_interval: 2000 # Log training stats every {} timesteps
 t_max: 10000 # Stop running after this many timesteps
-use_cuda: True # Use gpu by default unless it isn't available
+use_cuda: False # Use gpu by default unless it isn't available
 buffer_cpu_only: True # If true we won't keep all of the replay buffer in vram
 
 # --- Logging options ---
@@ -28,8 +28,8 @@ local_results_path: "results" # Path for local results
 
 # --- RL hyperparameters ---
 gamma: 0.99
-batch_size: 4 # Number of episodes to train on #! changed
-buffer_size: 4 # Size of the replay buffer #! changed
+batch_size: 32 # Number of episodes to train on
+buffer_size: 32 # Size of the replay buffer
 lr: 0.0005 # Learning rate for agents
 critic_lr: 0.0005 # Learning rate for critics
 optim_alpha: 0.99 # RMSProp alpha
@@ -39,8 +39,8 @@ grad_norm_clip: 10 # Reduce magnitude of gradients above this L2 norm
 # --- Agent parameters ---
 agent: "rnn" # Default rnn agent
 rnn_hidden_dim: 64 # Size of hidden state for default rnn agent
-obs_agent_id: False # Include the agent's one_hot id in the observation
-obs_last_action: False # Include the agent's last action (one_hot) in the observation
+obs_agent_id: false # Include the agent's one_hot id in the observation
+obs_last_action: false # Include the agent's last action (one_hot) in the observation
 
 # --- Experiment running params ---
 repeat_id: 1
