--- a/src/config/envs/multi_coverage.yaml
+++ b/src/config/envs/multi_coverage.yaml
@@ -2,18 +2,14 @@
 #   1. Standard coverage (n agents in grid world)
 #   2. Adversarial coverage (with threat in the world) - stochastic world
 
-env: "mrac"            # a grid-world class that allows to hunt two different types of prey
+env: "mrac"            # a grid-world for adversarial coverage
 
 env_args:
     random_seed: null       # defines np random seed for reproducability of tests
 
-    obstacles_location: []  # specified location of obstacles in the grid
-    simulated_mode: False   # if enabled, agents doesn't disabled by threats
-    threat_location: []     # specified location and severty of threats in the grid
-    toroidal: False         # whether the world is bounded (False) or toroidal (True)
-    world_shape: [9, 9]     # the shape of the grid-world [height, width]
+    map: "Cov_7x7_Safe_Sparse"     # A specified setup of the environment
 
-    random_config: True     # if enabled (True), obtacles and threats are located randomly (override obstacles\threats_location), based on:
+    random_config: False    # if enabled (True), obtacles and threats are located randomly (override obstacles\threats_location), based on:
     shuffle_config: False   # if enabled, the configuration of the area is changed every episode 
     obstacle_rate: 0.2      # ... percentage of the area contains obstacles
     threats_rate: 0.0       # ... percentage of the area contains threats using normal distribution with
@@ -29,9 +25,9 @@ env_args:
 
     allow_collisions: False # "True" allow two agents to be in the same cell
     allow_stay: True        # does agents can do "nothing action"
-    n_agents: 5
+    n_agents: 4
 
-    agents_placement: []    # if random_placement is False, location can be specified
+    simulated_mode: False   # if enabled, agents doesn't disabled by threats
     random_placement: True  # location of agents is randomized every episode
 
     reward_cell: 1.0        # positive reward for every cell covered (for the first time)
@@ -42,7 +38,7 @@ env_args:
     reward_time: -1.0       # negative reward for every timestep
 
 
-    episode_limit: 200      # maximum number of time steps per episode
+    episode_limit: 100      # maximum number of time steps per episode
 
-t_max: 20000000              # number of time steps of the experiment
+t_max: 750000              # number of time steps of the experiment
 
