--- a/maps/coverage_maps/Cov_7x7_Safe_Sparse.yaml
+++ b/maps/coverage_maps/Cov_7x7_Safe_Sparse.yaml
@@ -1,9 +1,10 @@
 # A map for advarserial coverage environment
 
-agents_placement: []    # if random_placement is False, location can be specified
+agents_placement: [[0, 0], [0, 6], [6, 0], [6, 6]]    # if random_placement is False, location can be specified
 obstacles_location: [
     [1, 1], [1, 5], [3, 3], [5, 1], [5, 5]
 ]  # specified location of obstacles in the grid
 threat_location: []     # specified location and severty of threats in the grid
 toroidal: False         # whether the world is bounded (False) or toroidal (True)
 world_shape: [7, 7]     # the shape of the grid-world [height, width]
+random_placement: False # location of agents is randomized every episode
