--- a/src/config/algs/pseq.yaml
+++ b/src/config/algs/pseq.yaml
@@ -10,12 +10,13 @@ epsilon_anneal_time: 150000    # Number of time steps until exploration has fini
 # specify learner, controller and agent
 agent: "rnn"                  # A RNN agent that returns its hidden state instead of its value # TODO select architecture
 agent_output_type: "q"        # The output format is Q-values
+internal_buffer_cpu: false     # Internal buffer use CPU-only. If CUDA enabled, copy the buffer to GPU before learning
 double_q: True                # DDQN
 learner: "pseq_learner"       # The learner for PSeq
 mac: "pseq"                   # The multi-agent controller for PSeq
 mixer:                        # No mixing network for PSeq
-mixing_embed_dim: 32          # Hidden dimensions of the state dependent bias function of DCG-V
+# mixing_embed_dim: 32          # Hidden dimensions of the state dependent bias function of DCG-V
 target_update_interval: 200   # Update the target network every {} episodes
 
 # PSeq-specific configuration
-random_ordering: True
+random_ordering: False
