--- a/src/config/envs/adv_coverage.yaml
+++ b/src/config/envs/adv_coverage.yaml
@@ -7,7 +7,7 @@ env: "mrac"            # a grid-world for adversarial coverage
 env_args:
     random_seed: null       # defines np random seed for reproducability of tests
 
-    map: "Cov_7x7_Safe_Sparse"     # A specified setup of the environment
+    map: "Cov_7x7_4Boxes"     # A specified setup of the environment
 
     random_config: False    # if enabled (True), obtacles and threats are located randomly (override obstacles\threats_location), based on:
     shuffle_config: False   # if enabled, the configuration of the area is changed every episode 
@@ -19,16 +19,13 @@ env_args:
     observation_range: -1   # radius of observation, -1 means full observability
     observe_ids: True       # observation includes agents' ids
     observe_state: False    # whether an observation is only partial (False) or central including agent position (True)
-    abs_location: True      # add one-hot layer to the observation with agent's self-location [Must be TRUE, other cases wasn't implemented]
     watch_covered: True     # observe which cells was covered and which wasn't
     watch_surface: True     # observe where obstacles and threat are located
 
     allow_collisions: False # "True" allow two agents to be in the same cell
     allow_stay: True        # does agents can do "nothing action"
-    n_agents: 4
 
     simulated_mode: False   # if enabled, agents doesn't disabled by threats
-    random_placement: True  # location of agents is randomized every episode
 
     reward_cell: 1.0        # positive reward for every cell covered (for the first time)
     reward_collision: 0.0   # negative reward for collisions
@@ -40,5 +37,5 @@ env_args:
 
     episode_limit: 100      # maximum number of time steps per episode
 
-t_max: 750000              # number of time steps of the experiment
+t_max: 500000              # number of time steps of the experiment
 
