--- a/maps/coverage_maps/Cov_4x4_Safe.yaml
+++ b/maps/coverage_maps/Cov_4x4_Safe.yaml
@@ -1,9 +1,11 @@
 # A map for advarserial coverage environment
 
-agents_placement: []    # if random_placement is False, location can be specified
+agents_placement: [[0, 0], [3, 3]]    # if random_placement is False, location can be specified
+n_agents: 2
 obstacles_location: [
     [0, 1], [1, 2], [3, 0], [3, 1]
 ]  # specified location of obstacles in the grid
 threat_location: []     # specified location and severty of threats in the grid
 toroidal: False         # whether the world is bounded (False) or toroidal (True)
 world_shape: [4, 4]     # the shape of the grid-world [height, width]
+random_placement: False # location of agents is randomized every episode
