--- a/maps/coverage_maps/Cov_5x5_Safe_Single.yaml
+++ b/maps/coverage_maps/Cov_5x5_Safe_Single.yaml
@@ -8,4 +8,4 @@ obstacles_location: [
 threat_location: []     # specified location and severty of threats in the grid
 toroidal: False         # whether the world is bounded (False) or toroidal (True)
 world_shape: [5, 5]     # the shape of the grid-world [height, width]
-random_placement: False # location of agents is randomized every episode
+random_placement: True # location of agents is randomized every episode
