--- a/src/config/envs/adv_coverage.yaml
+++ b/src/config/envs/adv_coverage.yaml
@@ -7,7 +7,7 @@ env: "mrac"            # a grid-world for adversarial coverage
 env_args:
     random_seed: null       # defines np random seed for reproducability of tests
 
-    map: "Cov_4x4_Safe"     # A specified setup of the environment
+    map: "Threat_5x5_Sparse"     # A specified setup of the environment
     # RECOMMENDED MAPS: Cov_11x11_9Boxes || Cov_4x4_Safe || Cov_11x11_9Rooms
  
     random_config: False    # if enabled (True), obtacles and threats are located randomly (override obstacles\threats_location), based on:
