--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,7 +25,21 @@
                 "obs_agent_id=False",
                 "-d"
             ],
-            "justMyCode": true
+        },
+        {
+            "name": "PyMARL_IQL",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/src/main.py",
+            "console": "integratedTerminal",
+            "args": [
+                "--config=iql",
+                "--env-config=adv_coverage",
+                "with",
+                "env_args.observe_ids=False",
+                "obs_agent_id=True",
+                "-d"
+            ],
         },
         {
             "name": "PyMARL_DCG",
