--- a/maps/coverage_maps/Threat_8x8_Hard.yaml
+++ b/maps/coverage_maps/Threat_8x8_Hard.yaml
@@ -1,6 +1,6 @@
 # A map for advarserial coverage environment
 
-agents_placement: []    # if random_placement is False, location can be specified
+agents_placement: [[2, 3], [3, 7], [5, 5]]    # if random_placement is False, location can be specified
 n_agents: 3
 obstacles_location: [
     [0, 0], [0, 2], [0, 7], [1, 5], [2, 1], [2, 2], [2, 6], [3, 1], [3, 4], [4, 5], [4, 6], [5, 2], [5, 4], [5, 6], [6, 1], [6, 3], [6, 6]
@@ -10,4 +10,4 @@ threat_location: [
     ] # specified location and severty of threats in the grid
 toroidal: False         # whether the world is bounded (False) or toroidal (True)
 world_shape: [8, 8]     # the shape of the grid-world [height, width]
-random_placement: True # location of agents is randomized every episode
+random_placement: False # location of agents is randomized every episode
