--- a/src/config/envs/adv_coverage.yaml
+++ b/src/config/envs/adv_coverage.yaml
@@ -7,8 +7,8 @@ env: "mrac"            # a grid-world for adversarial coverage
 env_args:
     random_seed: null       # defines np random seed for reproducability of tests
 
-    map: "Threat_5x5_Hard"     # A specified setup of the environment
-    # RECOMMENDED MAPS: Threat_8x8_Hard || Threat_7x7_Hard || Threat_6x6_Medium
+    map: "Threat_7x7_Hard"     # A specified setup of the environment
+    # RECOMMENDED MAPS: Threat_8x8_Hard || Threat_7x7_Hard || Threat_6x6_Medium || Threat_5x5_Hard
  
     random_config: False    # if enabled (True), obtacles and threats are located randomly (override obstacles\threats_location), based on:
     shuffle_config: False   # if enabled, the configuration of the area is changed every episode 
