--- a/src/config/algs/maps.yaml
+++ b/src/config/algs/maps.yaml
@@ -15,17 +15,16 @@ learner: "maps_learner"       # The learner for MAPS
 mac: "maps"                   # The multi-agent controller for MAPS
 mixer:                        # No mixing network for MAPS
 target_update_interval: 200   # Update the target network every {} episodes
-TDn_bound: 1                   # TD-lambda bound on n. null -> n_agents+1
+TDn_bound:                    # TD-lambda bound on n. null -> n_agents+1
 TDn_weight: 0.3               # TD-lambda weights, calculate (1-lambda), lambda(1-lambda) etc.
 
 # MAPS-specific configuration
 random_ordering: False        # Re-order sequence of agents action-selection every step
 decomposed_reward: True       # If True, use agent-specific reward from action model. Otherwise, use divide the joint reward between agents
-skip_disabled: False          # If True, disabled or removed agents are skipped
 
 # Stoachstic Environment
 apply_MCTS: True              # if True, MCTS buffer is activated. Otherwise, a mean-state is calculated (deterministic -> automatically False)
-MCTS_buffer_size: 16           # Size of MCTS buffer for stochastic environment
+MCTS_buffer_size: 8           # Size of MCTS buffer for stochastic environment
 MCTS_sampling: 0              # Sample from MCTS buffer when selecting an action. 0 means "the whole filled buffer"
 
 internal_buffer_cuda: True    # Use CUDA for internal buffer to enhance performance
