--- a/src/test/hunt_trip_test.yaml
+++ b/src/test/hunt_trip_test.yaml
@@ -25,7 +25,7 @@ env_args:
     reward_carry: -0.2      # negative reward for carring a prey in the "bag", what make it heavier
     reward_catch: -1.0      # a negative reward for catch (catching a prey is expensive, in case of succes, get additional reward for hunting)
     reward_collision: 0.0   # negative reward for collision
-    reward_hunt: 11.0       # positive reward for every cell covered (for the first time)
+    reward_hunt: 6.0        # succesfully hunting a prey
     reward_move: -0.4       # a cost of making a move
     reward_stay: -0.1       # a lower cost for staying not making a move. When staying, "carry reward" does not rewarded
 
