--- a/src/config/envs/hunt_trip.yaml
+++ b/src/config/envs/hunt_trip.yaml
@@ -7,7 +7,7 @@ env_args:
     random_seed: null       # defines np random seed for reproducability of tests
 
     obstacles: False        # Obstacles in the grid map
-    map: null               # A specified setup obstacles in the environment
+    map: "5x5_Simple"       # A specified setup obstacles in the environment
  
     random_config: False    # if enabled (True), obtacles are located randomly (override map), based on:
     obstacle_rate: 0.2      # ... percentage of the area contains obstacles
@@ -16,6 +16,7 @@ env_args:
     observation_range: -1   # radius of observation, -1 means full observability
     observe_ids: False      # observation includes agents' ids
     observe_state: True     # whether an observation is only partial (False) or central including agent position (True)
+    watch_carried: False    # observe how many preys each predator carry
     watch_surface: True     # observe where obstacles and threat are located
 
     allow_collisions: False # "True" allow two agents to be in the same cell
