--- a/src/config/envs/hunt_trip.yaml
+++ b/src/config/envs/hunt_trip.yaml
@@ -7,7 +7,7 @@ env_args:
     random_seed: null       # defines np random seed for reproducability of tests
 
     obstacles: False        # Obstacles in the grid map
-    map: "5x5_Simple"       # A specified setup obstacles in the environment
+    map: "Hunt_5x5_Simple"       # A specified setup obstacles in the environment
  
     random_config: False    # if enabled (True), obtacles are located randomly (override map), based on:
     obstacle_rate: 0.2      # ... percentage of the area contains obstacles
@@ -16,13 +16,13 @@ env_args:
     observation_range: -1   # radius of observation, -1 means full observability
     observe_ids: False      # observation includes agents' ids
     observe_state: True     # whether an observation is only partial (False) or central including agent position (True)
-    watch_carried: False    # observe how many preys each predator carry
+    watch_carried: True     # observe how many preys each predator carry
     watch_surface: True     # observe where obstacles and threat are located
 
     allow_collisions: False # "True" allow two agents to be in the same cell
     catch_validity: False   # Allow agents to select "catch" action only when adjacent to a prey
+    directed_catch: True    # Agents should specify in which direction their prey is, in order to catch it
     failure_prob: 0.0       # The probability of an action to fail. In that case, "stay" is executed
-    directed_catch: True    # There are 5 "catch" actions, each for each side, rather than one action
 
     reward_carry: -0.2      # negative reward for carring a prey in the "bag", what make it heavier
     reward_catch: -1.0      # a negative reward for catch (catching a prey is expensive, in case of succes, get additional reward for hunting)
