--- a/src/config/envs/hunt_trip.yaml
+++ b/src/config/envs/hunt_trip.yaml
@@ -7,7 +7,7 @@ env_args:
     random_seed: null       # defines np random seed for reproducability of tests
 
     obstacles: False        # Obstacles in the grid map
-    map: "Hunt_8x8_Walls"       # A specified setup obstacles in the environment
+    map: "Hunt_7x7_Simple"       # A specified setup obstacles in the environment
  
     random_config: False    # if enabled (True), obtacles are located randomly (override map), based on:
     obstacle_rate: 0.2      # ... percentage of the area contains obstacles
