--- a/src/config/algs/maps.yaml
+++ b/src/config/algs/maps.yaml
@@ -5,7 +5,7 @@ name: "maps"
 action_selector: "epsilon_greedy"
 epsilon_start: 1.0            # Initial epsilon for exploration
 epsilon_finish: 0.05          # Final epsilon for exploration
-epsilon_anneal_time: 150000    # Number of time steps until exploration has finished
+epsilon_anneal_time: 256    # Number of time steps until exploration has finished
 
 # specify learner, controller and agent
 agent: "rnn"                  # A RNN agent that returns its hidden state instead of its value
@@ -19,7 +19,7 @@ TDn_bound:                    # TD-lambda bound on n. null -> n_agents+1
 TDn_weight: 0.3               # TD-lambda weights, calculate (1-lambda), lambda(1-lambda) etc.
 
 # MAPS-specific configuration
-random_ordering: True         # Re-order sequence of agents action-selection every step
+random_ordering: False         # Re-order sequence of agents action-selection every step
 decomposed_reward: True       # If True, use agent-specific reward from action model. Otherwise, use divide the joint reward between agents
 
 # Stoachstic Environment
